--- a/eren_2d/Cargo.toml
+++ b/eren_2d/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 bytemuck = "1.23.0"
-eren_core = { path = "../eren_rs_core" }
+eren_core = { path = "../eren_core" }
 tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
 wgpu = "25.0.2"
 winit = "0.30.11"
