Refactor eren_2d and eren_3d projects to use Ash for Vulkan rendering
- Updated dependencies in Cargo.toml for both eren_2d and eren_3d to replace Bevy and WGPU with Ash.
- Removed unused sprite-related code and assets from eren_2d.
- Refactored App structure in eren_2d to accommodate new graphics library configuration.
- Deleted obsolete files related to sprite rendering and asset management in eren_core.
- Introduced VulkanState management in eren_core for Vulkan initialization and resource handling.
- Implemented GpuState for WGPU rendering in eren_core, ensuring compatibility with the new architecture.
- Updated module structures to reflect the new rendering architecture.

--- a/eren_2d/Cargo.toml
+++ b/eren_2d/Cargo.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = "0.16.0"
-bytemuck = "1.23.0"
+ash = "0.38.0"
 eren_core = { path = "../eren_core" }
-tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
 wgpu = "25.0.2"
 winit = "0.30.11"
