--- a/eren_2d/Cargo.toml
+++ b/eren_2d/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 ash = "0.38.0"
 eren_core = { path = "../eren_core" }
+image = "0.25.6"
 wgpu = "25.0.2"
 winit = "0.30.11"
