--- a/eren_2d/Cargo.toml
+++ b/eren_2d/Cargo.toml
@@ -8,5 +8,6 @@ ash = "0.38.0"
 bytemuck = "1.23.0"
 eren_core = { path = "../eren_core" }
 image = "0.25.6"
+rand = "0.9.1"
 wgpu = "25.0.2"
 winit = "0.30.11"
