--- a/eren_2d/Cargo.toml
+++ b/eren_2d/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 ash = "0.38.0"
+bevy = "0.16.1"
+bevy_dev_tools = "0.16.1"
 bytemuck = "1.23.0"
 eren_core = { path = "../eren_core" }
 image = "0.25.6"
