Add sprite movement example and transform structures
- Introduced a new example in `test_sprite.rs` demonstrating the movement of 100,000 sprites across the screen with random velocities.
- Implemented a basic FPS overlay using the `FpsOverlayPlugin` for performance monitoring.
- Created `LocalTransform` and `GlobalTransform` structs in `transform.rs` to manage position, scale, rotation, and alpha properties for 3D transformations.
- Added functionality to handle sprite boundary collisions, reversing their velocity upon hitting the window edges.
- Included a new sprite asset `test_sprite.png` for rendering in the example.

--- a/eren_3d/Cargo.toml
+++ b/eren_3d/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 [dependencies]
 ash = "0.38.0"
 eren_core = { path = "../eren_core" }
+glam = "0.30.3"
+gltf = "1.4.1"
 wgpu = "25.0.2"
 winit = "0.30.11"
