--- a/eren_2d/Cargo.toml
+++ b/eren_2d/Cargo.toml
@@ -5,10 +5,9 @@ edition = "2024"
 
 [dependencies]
 ash = "0.38.0"
-bevy = "0.16.1"
-bevy_dev_tools = "0.16.1"
 bytemuck = "1.23.0"
 eren_core = { path = "../eren_core" }
+glam = "0.30.3"
 image = "0.25.6"
 rand = "0.9.1"
 wgpu = "25.0.2"
