--- a/eren_3d/Cargo.toml
+++ b/eren_3d/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024"
 
 [dependencies]
 ash = "0.38.0"
+bytemuck = "1.23.0"
 eren_core = { path = "../eren_core" }
 glam = "0.30.3"
 gltf = "1.4.1"
+image = "0.25.6"
 wgpu = "25.0.2"
 winit = "0.30.11"
