--- a/eren_3d/Cargo.toml
+++ b/eren_3d/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-ash = "0.38.0"
 bytemuck = "1.23.0"
 eren_core = { path = "../eren_core" }
 glam = "0.30.3"
@@ -12,3 +11,6 @@ gltf = "1.4.1"
 image = "0.25.6"
 wgpu = "25.0.2"
 winit = "0.30.11"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+ash = "0.38.0"
