feat: Add sprite test example with loading and in-game screens
- Created index.html for the sprite test example.
- Implemented index.ts with RootNode, LoadingScreen, and InGameScreen classes.
- Added asset bundle management for loading sprite assets.
- Defined GameNode interface for game node updates.
- Developed SpriteNode class for rendering sprites.
- Established GameState class to manage game state and render requests.
- Configured TypeScript and Webpack for the example project.
- Added assets state management in the core library.

--- a/eren_ts_3d/package.json
+++ b/eren_ts_3d/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@erenengine/3d",
+  "name": "@erenengine/next_3d",
   "type": "module",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
