feat: Add sprite test example with loading and in-game screens
- Created index.html and index.ts for the sprite test example.
- Implemented RootNode, LoadingScreen, and InGameScreen classes to manage game states.
- Introduced AssetBundle class to handle loading of sprite assets.
- Added GameNode interface and SpriteNode class for rendering sprites.
- Defined SpriteAssets enum for managing sprite assets.

--- a/eren_ts_2d/examples/tsconfig.json
+++ b/eren_ts_2d/examples/tsconfig.json
@@ -9,7 +9,7 @@
     "esModuleInterop": true,
     "lib": [
       "DOM",
-      "ES2015",
+      "ESNext",
       "ScriptHost"
     ],
     "declaration": true,
