--- a/eren_ts_3d/package.json
+++ b/eren_ts_3d/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@erenengine/next_3d",
+  "name": "@erenengine/next-3d",
   "type": "module",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
