--- a/eren_ts_core/package.json
+++ b/eren_ts_core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@erenengine/next_core",
+  "name": "@erenengine/next-core",
   "type": "module",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
