--- a/eren_render_vulkan_core/Cargo.toml
+++ b/eren_render_vulkan_core/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 ash = "0.38.0"
+ash-window = "0.13.0"
 eren_window = { path = "../eren_window" }
 winit = "0.30.11"
