--- a/eren_render_core/Cargo.toml
+++ b/eren_render_core/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 eren_window = { path = "../eren_window" }
 pollster = "0.4.0"
+thiserror = "2.0.12"
 wgpu = "25.0.2"
 winit = "0.30.11"
