--- a/eren_render_vulkan_3d/Cargo.toml
+++ b/eren_render_vulkan_3d/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2024"
 crate-type = ["rlib", "cdylib"]
 
 [dependencies]
+eren_render_vulkan_core = { path = "../eren_render_vulkan_core" }
 ash = "0.38.0"
+thiserror = "2.0.12"
