--- a/eren_render_vulkan_3d/Cargo.toml
+++ b/eren_render_vulkan_3d/Cargo.toml
@@ -8,5 +8,7 @@ crate-type = ["rlib", "cdylib"]
 
 [dependencies]
 eren_render_vulkan_core = { path = "../eren_render_vulkan_core" }
+eren_window = { path = "../eren_window" }
 ash = "0.38.0"
 thiserror = "2.0.12"
+winit = "0.30.11"
