Add TypeScript definitions for WebAssembly module in test_window_wasm_bg.wasm.d.ts
- Generated TypeScript definitions for the WebAssembly module, including memory, start, main, and various closure functions.
- This addition enhances type safety and improves integration with TypeScript projects.

--- a/eren_render_core/Cargo.toml
+++ b/eren_render_core/Cargo.toml
@@ -7,5 +7,11 @@ edition = "2024"
 eren_window = { path = "../eren_window" }
 pollster = "0.4.0"
 thiserror = "2.0.12"
+wasm-bindgen = "0.2.100"
+wasm-bindgen-futures = "0.4.50"
+web-sys = { version = "0.3.77", features = ["Window", "console"] }
 wgpu = "25.0.2"
 winit = "0.30.11"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+native-dialog = "0.9.0"
