--- a/eren_render_vulkan_core/Cargo.toml
+++ b/eren_render_vulkan_core/Cargo.toml
@@ -9,3 +9,6 @@ ash-window = "0.13.0"
 eren_window = { path = "../eren_window" }
 thiserror = "2.0.12"
 winit = "0.30.11"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+native-dialog = "0.9.0"
