--- a/eren_window/Cargo.toml
+++ b/eren_window/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-native-dialog = "0.9.0"
+wasm-bindgen = "0.2.100"
+web-sys = { version = "0.3.77", features = ["Window", "console"] }
 winit = "0.30.11"
