--- a/eren_window/Cargo.toml
+++ b/eren_window/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+thiserror = "2.0.12"
 wasm-bindgen = "0.2.100"
 web-sys = { version = "0.3.77", features = ["Window", "console"] }
 winit = "0.30.11"
