--- a/eren_render_core/Cargo.toml
+++ b/eren_render_core/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+console_error_panic_hook = "0.1.7"
 eren_window = { path = "../eren_window" }
+futures = "0.3.31"
 pollster = "0.4.0"
 thiserror = "2.0.12"
 wasm-bindgen = "0.2.100"
