--- a/eren_render_3d/Cargo.toml
+++ b/eren_render_3d/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 bytemuck = "1.23.1"
 eren_render_core = { path = "../eren_render_core" }
 eren_window = { path = "../eren_window" }
+futures = "0.3.31"
 pollster = "0.4.0"
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
