--- a/eren_render_3d/Cargo.toml
+++ b/eren_render_3d/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 bytemuck = "1.23.1"
+console_error_panic_hook = "0.1.7"
 eren_render_core = { path = "../eren_render_core" }
 eren_window = { path = "../eren_window" }
 futures = "0.3.31"
@@ -12,7 +13,7 @@ pollster = "0.4.0"
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
 web-sys = { version = "0.3.77", features = ["Window", "console"] }
-wgpu = "25.0.2"
+wgpu = { version = "25.0.2", features = ["webgl"] }
 winit = "0.30.11"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
