--- a/eren_render_core/Cargo.toml
+++ b/eren_render_core/Cargo.toml
@@ -12,7 +12,7 @@ thiserror = "2.0.12"
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
 web-sys = { version = "0.3.77", features = ["Window", "console"] }
-wgpu = "25.0.2"
+wgpu = { version = "25.0.2", features = ["webgl"] }
 winit = "0.30.11"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
