--- a/eren_render_vulkan_3d/Cargo.toml
+++ b/eren_render_vulkan_3d/Cargo.toml
@@ -13,6 +13,7 @@ ash = "0.38.0"
 thiserror = "2.0.12"
 winit = "0.30.11"
 bytemuck = "1.23.1"
+glam = "0.30.4"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 native-dialog = "0.9.0"
